<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dp_100"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_4"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_4">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_gray"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_item_music_track"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:scaleType="fitXY"
                android:src="@drawable/img1" />

            <TextView
                android:id="@+id/text_item_music_title"
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_4"
                android:singleLine="true"
                android:text="@string/text_all_music_title" />

            <TextView
                android:id="@+id/text_item_music_artist"
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_4"
                android:singleLine="true"
                android:text="@string/text_all_music_artist"
                android:textSize="@dimen/dp_10" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="@dimen/dp_4"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_marginTop="@dimen/dp_2"
                    android:clickable="false"
                    android:src="@drawable/ic_headset_black_24dp" />

                <TextView
                    android:id="@+id/text_item_music_playback_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_4"
                    android:text="@string/text_all_music_playback_count"
                    android:textSize="@dimen/dp_10" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
